:toc: macro
:toclevels: 1

= Change Log

A high level summary of noteworthy changes in each version.

NOTE:: Dependency version bumps are not listed here.

// git log --pretty="* %s" 0.3.0.2..HEAD

// only show TOC if this is the root document (not in the README)
ifndef::github_name[]
toc::[]
endif::[]

== 0.5.2.7

=== Fixes
* fix: Parallel consumer stops processing data sometimes (#606)


== 0.5.2.6
=== Improvements

* feature: Micrometer metrics (#594)
* feature: Adds an option to pass an invalid offset metadata error policy (#537), improves (#326)
* feature: Lazy intialization of workerThreadPool (#531)

=== Fixes

* fix: Don't drain mode shutdown kills inflight threads (#559)
* fix: Drain mode shutdown doesn't pause consumption correctly (#552)
* fix: RunLength offset decoding returns 0 base offset after no-progress commit - related to (#546)
* fix: Transactional PConsumer stuck while rebalancing - related to (#541)

=== Dependencies

* PL-211: Update dependencies from dependabot, Add mvnw, use mvnw in jenkins (#583)
* PL-211: Update dependencies from dependabot (#589)

== 0.5.2.5

=== Fixes

* fixes: #195 NoSuchFieldException when using consumer inherited from KafkaConsumer (#469)
* fix: After new performance fix PR#530 merges - corner case could cause out of order processing (#534)
* fix: Cleanup WorkManager's count of in-progress work, when work is stale after partition revocation (#547)

=== Improvements

* perf: Adds a caching layer to work management to alleviate O(n) counting (#530)

== 0.5.2.4

=== Improvements

* feature: Simple PCRetriableException to remove error spam from logs (#444)
* minor: fixes #486: Missing generics in JStreamParallelStreamProcessor #491
* minor: partially address #459: Moves isClosedOrFailed into top level ParallelConsumer interface (#491)
* tests: Demonstrates how to use MockConsumer with PC for issue #176
* other minor improvements

=== Fixes

* fixes #409: Adds support for compacted topics and commit offset resetting (#425)