@@ -17,8 +17,9 @@ endif::[]
 == 0.5.2.7
 
 === Fixes
-* fix: Parallel consumer stops processing data sometimes (#606)
 
+* fix: Return cached pausedPartitionSet (#618)
+* fix: Parallel consumer stops processing data sometimes (#606)
 
 == 0.5.2.6
 === Improvements
